Support basic layer lock

--- a/styles/swiftray-dark.qss
+++ b/styles/swiftray-dark.qss
@@ -96,6 +96,14 @@ QDoubleSpinBox {
   opacity: 1;
 }
 
+#btnLock {
+  opacity: 0;
+}
+
+#btnLock:hover {
+  opacity: 1;
+}
+
 QToolBar QToolButton, QListWidget QToolButton, #documentDock QToolButton, #objectParamDock QToolButton  {
   border-width: 0px;
   border-radius: 0px;
