--- a/src/widgets/components/layer-list-item.ui
+++ b/src/widgets/components/layer-list-item.ui
@@ -104,7 +104,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="../../../qml.qrc">:/images/icon-cursor-01.png</pixmap>
+         <pixmap>:/images/icon-cursor-01.png</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -193,6 +193,29 @@
         </property>
         <property name="checked">
          <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="btnLock">
+        <property name="styleSheet">
+         <string notr="true">background: none;</string>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../qml.qrc">
+          <normaloff>:/images/icon-layerlock.png</normaloff>:/images/icon-layerlock.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>24</width>
+          <height>24</height>
+         </size>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
