--- a/src/windows/preview-window.ui
+++ b/src/windows/preview-window.ui
@@ -36,6 +36,17 @@
        <number>0</number>
       </property>
       <item>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <widget class="QLabel" name="requiredTime">
+          <property name="text">
+           <string>Required Time</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
        <widget class="QSlider" name="progress">
         <property name="maximum">
          <number>100</number>
