--- a/src/windows/gcode-player.ui
+++ b/src/windows/gcode-player.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>196</width>
-    <height>252</height>
+    <width>299</width>
+    <height>262</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>299</width>
+    <height>0</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>299</width>
+    <height>16777215</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -77,6 +89,13 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QQuickWidget" name="maintenanceController">
+     <property name="resizeMode">
+      <enum>QQuickWidget::SizeRootObjectToView</enum>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QPlainTextEdit" name="gcodeText"/>
@@ -161,6 +180,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QQuickWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">QtQuickWidgets/QQuickWidget</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
