--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -76,7 +76,7 @@
      <x>0</x>
      <y>0</y>
      <width>1250</width>
-     <height>24</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -106,6 +106,7 @@
       <string>Image</string>
      </property>
      <addaction name="actionTrace"/>
+     <addaction name="actionSharpen"/>
     </widget>
     <widget class="QMenu" name="menuPath">
      <property name="title">
@@ -898,6 +899,11 @@
   <action name="actionPathOffset">
    <property name="text">
     <string>Offset</string>
+   </property>
+  </action>
+  <action name="actionSharpen">
+   <property name="text">
+    <string>Sharpen</string>
    </property>
   </action>
  </widget>
