Change cursor icon for layer hide and layer lock button

--- a/src/widgets/components/layer-list-item.ui
+++ b/src/widgets/components/layer-list-item.ui
@@ -171,6 +171,9 @@
           <height>16777215</height>
          </size>
         </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
         <property name="styleSheet">
          <string notr="true">background: none;</string>
         </property>
@@ -198,6 +201,9 @@
       </item>
       <item>
        <widget class="QToolButton" name="btnLock">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
         <property name="styleSheet">
          <string notr="true">background: none;</string>
         </property>
