Change cursor for preview window slider

--- a/src/windows/preview-window.ui
+++ b/src/windows/preview-window.ui
@@ -48,6 +48,18 @@
       </item>
       <item>
        <widget class="QSlider" name="progress">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="autoFillBackground">
+         <bool>false</bool>
+        </property>
         <property name="maximum">
          <number>100</number>
         </property>
@@ -56,6 +68,12 @@
         </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="invertedAppearance">
+         <bool>false</bool>
+        </property>
+        <property name="invertedControls">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
