--- a/src/widgets/components/layer-list-item.ui
+++ b/src/widgets/components/layer-list-item.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>249</width>
+    <width>243</width>
     <height>42</height>
    </rect>
   </property>
@@ -23,6 +23,12 @@
    <size>
     <width>200</width>
     <height>0</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>300</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
