--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -91,6 +91,7 @@
     </widget>
     <addaction name="actionOpen"/>
     <addaction name="actionSave"/>
+    <addaction name="actionSave_As"/>
     <addaction name="actionPreferences"/>
     <addaction name="actionPreview"/>
     <addaction name="menuExport"/>
@@ -898,6 +899,20 @@
   <action name="actionPathOffset">
    <property name="text">
     <string>Offset</string>
+   </property>
+  </action>
+  <action name="actionSave_As">
+   <property name="text">
+    <string>Save As...</string>
+   </property>
+   <property name="iconText">
+    <string>Save As...</string>
+   </property>
+   <property name="toolTip">
+    <string>Save As...</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
    </property>
   </action>
  </widget>
