--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -109,6 +109,7 @@
      </property>
      <addaction name="actionTrace"/>
      <addaction name="actionInvert"/>
+     <addaction name="actionReplace_with"/>
      <addaction name="actionSharpen"/>
     </widget>
     <widget class="QMenu" name="menuPath">
@@ -932,6 +933,16 @@
   <action name="actionInvert">
    <property name="text">
     <string>Invert</string>
+   </property>
+  </action>
+  <action name="actionInvert">
+   <property name="text">
+    <string>Invert</string>
+   </property>
+  </action>
+  <action name="actionReplace_with">
+   <property name="text">
+    <string>Replace with ...</string>
    </property>
   </action>
  </widget>
