Adjust border of color picker button. Adjust layer-list-item layout.

--- a/src/widgets/components/color-picker-button.ui
+++ b/src/widgets/components/color-picker-button.ui
@@ -13,6 +13,19 @@
   <property name="windowTitle">
    <string>ColorPickerButton</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QToolButton:hover {
+  background-color: transparent;
+  border: 2px solid green;
+  padding: 4px;
+}
+QToolButton {
+  background-color: transparent;
+  border: 2px solid green;
+  padding: 4px;
+}
+</string>
+  </property>
  </widget>
  <resources/>
  <connections/>
