--- a/src/windows/gcode-player.ui
+++ b/src/windows/gcode-player.ui
@@ -91,6 +91,24 @@
     </layout>
    </item>
    <item>
+    <layout class="QGridLayout" name="gridLayout_4" rowstretch="0,0" columnstretch="1,2">
+     <item row="0" column="0">
+      <widget class="QLabel" name="labelStatus">
+       <property name="text">
+        <string>Status</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="connectionStatus">
+       <property name="text">
+        <string>Disconnected</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <widget class="QPushButton" name="connectBtn">
      <property name="enabled">
       <bool>true</bool>
